--- a/index.html
+++ b/index.html
@@ -4,102 +4,106 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/style.css">
+    <link
+        href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap&subset=cyrillic"
+        rel="stylesheet">
     <title>Анкета</title>
 </head>
 
 <body>
-    <div class="mainDiv">
-        <form>
-            <h2>Общие данные: </h2>
-            <div class="info">
 
+    <div class="mainDiv">
+        <h1>Анкета</h1>
+        <form>
+            <h2 class="blockName">Общие данные</h2>
+            <div class="block">
+                <div>
+                    <label>Фотография: ( Файлы типа: .jpg, .jpeg, .png ) </label>
+                    <input type="file" placeholder="Фотография" value="" accept=".jpg, .jpeg, .png">
+                </div>
                 <div>
                     <label>Имя: </label>
-                    <input class="name" type="text" placeholder="Имя" value="">
+                    <input type="text" placeholder="Имя" value="">
                 </div>
                 <div>
                     <label>Фамилия: </label>
-                    <input class="lastName" type="text" placeholder="Фамилия">
+                    <input type="text" placeholder="Фамилия">
                 </div>
 
                 <div>
                     <label>Отчество: </label>
-                    <input class="suraname" type="text" placeholder="Отчество">
+                    <input type="text" placeholder="Отчество">
                 </div>
                 <div>
                     <label>Дата рождения: </label>
-                    <input class="birthDate" type="date" placeholder="Дата рождения">
+                    <input type="date" placeholder="Дата рождения">
                 </div>
+
             </div>
-            <h2>Образование: </h2>
-            <div class="education">
+            <h2 class="blockName">Образование</h2>
+            <div class="block">
 
                 <div>
                     <label>Учреждение образования: </label>
 
-                    <input class="university" type="text" placeholder="Учреждение образования">
+                    <input type="text" placeholder="Учреждение образования">
                 </div>
 
                 <div>
                     <label>Факультет: </label>
 
-                    <input class="fuculty" type="text" placeholder="Факультет">
+                    <input type="text" placeholder="Факультет">
                 </div>
 
                 <div>
                     <label>Специализация: </label>
 
-                    <input class="specialisation" type="text" placeholder="Специализация">
+                    <input type="text" placeholder="Специализация">
                 </div>
 
                 <div>
                     <label>Год завершения: </label>
 
-                    <input class="endYear" type="text" placeholder="Год завершения">
+                    <input type="text" placeholder="Год завершения" pattern="[0-9]{4}">
                 </div>
 
             </div>
-            <h2>Контактная информация: </h2>
-            <div class="contactInfo">
+            <h2 class="blockName">Контактная информация</h2>
+            <div class="block">
                 <div>
-                    <label>Телефон: </label>
+                    <label>Телефон: ( +375(44/29/33/25) ) </label>
 
-                    <input class="telephone" type="tel" placeholder="Телефон">
+                    <input type="tel" placeholder="Телефон" pattern="\+375\((17|29|33|44)\)[0-9]{3}[0-9]{2}[0-9]{2}">
                 </div>
 
                 <div>
-                    <label>Почта: </label>
+                    <label>Почта: ( @gmail.com... ) </label>
 
-                    <input class="email" type="email" placeholder="Почта">
+                    <input type="email" placeholder="Почта">
                 </div>
 
                 <div>
                     <label>Skype: </label>
 
-                    <input class="skype" type="text" placeholder="Skype">
+                    <input type="text" placeholder="Skype">
                 </div>
 
                 <div>
                     <label>Telegram: </label>
 
-                    <input class="telegram" type="text" placeholder="Telegram">
+                    <input type="text" placeholder="Telegram">
                 </div>
-
-                <div>
-                    <label>Другое: </label>
-
-                    <input class="else" type="text" placeholder="Другое">
-                </div>
-
-
             </div>
-
-
+            <h2 class="blockName">Другое</h2>
+            <div class="block">
+                <textarea placeholder="Напишите дополнительную информацию"></textarea>
+            </div>
+            <button class="showInfo">
+                Ok
+            </button>
         </form>
-        <button class="showInfo">
-            Ok
-        </button>
     </div>
+
     <script src="./js/script.js"></script>
 </body>
 
