--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
             <h2 class="blockName">Контактная информация</h2>
             <div class="block">
                 <div>
-                    <label>Телефон: ( +375(44/29/33/25) ) </label>
+                    <label>Телефон: (Пример: +375(44)1234567 ) </label>
 
-                    <input type="tel" placeholder="Телефон" pattern="\+375\((17|29|33|44)\)[0-9]{3}[0-9]{2}[0-9]{2}">
+                    <input type="tel" placeholder="Телефон" pattern="\+375\((17|29|33|44)\)[0-9]{7}">
                 </div>
 
                 <div>
-                    <label>Почта: ( @gmail.com... ) </label>
+                    <label>Почта: ( example@gmail.com ) </label>
 
                     <input type="email" placeholder="Почта">
                 </div>
