--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
 
                 <div>
-                    <label>Год завершения: </label>
+                    <label>Год завершения: (Пример: 2019 ) </label>
 
                     <input type="text" placeholder="Год завершения" pattern="[0-9]{4}">
                 </div>
@@ -98,10 +98,11 @@
             <div class="block">
                 <textarea placeholder="Напишите дополнительную информацию"></textarea>
             </div>
-            <button class="showInfo">
-                Ok
-            </button>
+
         </form>
+        <button class="showInfo">
+            Ok
+        </button>
     </div>
 
     <script src="./js/script.js"></script>
